# macroman

./: Cargo.toml  flake.nix
src/: app.rs  colors.rs  executor.rs  input.rs  main.rs  model.rs  ui.rs
src/platform/: linux.rs  mod.rs  stub.rs
src/ui/: editor.rs  footer.rs  header.rs  list.rs
src/ui/editor/: meta.rs  steps.rs
